fix deprecated method class.newInstance() for preferences